<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="136dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toTopOf="@+id/tvFaceDado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbDado1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dado1" />

        <RadioButton
            android:id="@+id/rbDado2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dado2" />

        <RadioButton
            android:id="@+id/rbDado3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dado3" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spFaceDado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/btnJogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFaceDado"
        app:layout_constraintVertical_bias="0.34" />

    <TextView
        android:id="@+id/tvFaceDado"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:layout_marginTop="312dp"
        android:layout_marginBottom="13dp"
        android:text="@string/tvFaceDado"
        app:layout_constraintBottom_toTopOf="@+id/spFaceDado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQtdDados"
        android:layout_width="138dp"
        android:layout_height="23dp"
        android:text="@string/tvQtdDados"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="204dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJogar" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/jogar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFaceDado" />

</androidx.constraintlayout.widget.ConstraintLayout>